# Tre-ias-projektas

./: DuomenuSkaitymas.cpp  FailoNuskaitymas.cpp  FailoNuskaitymas.h  Isvedimas.cpp  Isvedimas.h  README.md  duomenys.cpp  duomenys.h  kursiokai.txt  main.cpp  matavimai.txt  matavimai3.txt  student.cpp  test.cpp
LIST_DIEGIMAS/: CMakeLists.txt  main
LIST_DIEGIMAS/include/: FailoNuskaitymas.h  Isvedimas.h  duomenys.h
LIST_DIEGIMAS/src/: Isvedimas.cpp  main.cpp
VECTOR KLASE/: FailoNuskaitymas.cpp  FailoNuskaitymas.h  Isvedimas.cpp  Isvedimas.h  duomenys.cpp  duomenys.h  main.cpp
VECTOR_DIEGIMAS/: CMakeLists.txt  main
VECTOR_DIEGIMAS/include/: Isvedimas.h  duomenys.h
VECTOR_DIEGIMAS/src/: FailoNuskaitymas.cpp  duomenys.cpp  main.cpp  studentai_1000.txt
Vector Klase/: FailoNuskaitymas.cpp  Isvedimas.cpp  duomenys.h  main.cpp
Vector Struct/: Isvedimas.cpp  duomenys.cpp  main.cpp
